--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,28 @@ img {
   display: flex;
 }
 
+.work-list .item {
+  position: relative;
+}
+
+.work-list-text {
+  /* position: absolute; */
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.work-list-title {
+  position: absolute;
+  /* bottom: 0; */
+  color: var(--white);
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  outline: 3px solid orange;
+}
+
 .team {
   background-color: var(--bg-team);
 }
