--- a/css/style.css
+++ b/css/style.css
@@ -276,22 +276,22 @@ img {
   position: relative;
 }
 
-.work-list-text {
-  /* position: absolute; */
-  width: 100%;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-}
-
 .work-list-title {
-  position: absolute;
-  /* bottom: 0; */
+  width: 100%;
+  margin: 0;
+  padding: 27px 82px;
+
   color: var(--white);
   font-size: 14px;
   line-height: 1.14;
   text-align: center;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  outline: 3px solid orange;
+  background-color: rgba(47, 48, 58, 0.8);
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .team {
