--- a/css/style.css
+++ b/css/style.css
@@ -503,6 +503,8 @@ img {
   margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
+
+  position: relative;
 }
 
 .product-list .item:nth-child(3n) {
@@ -517,6 +519,28 @@ img {
 .product-list > .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 63px 24px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: var(--white);
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+}
+
+.product-list > .item:hover .description,
+.product-list > .item:focus .description {
+  opacity: 1;
 }
 
 .product-list .subtitle {
