Редактирует страницу Портфолио

--- a/css/style.css
+++ b/css/style.css
@@ -515,8 +515,8 @@ img {
   margin-bottom: 0;
 }
 
-.product-list > .item:hover,
-.product-list > .item:focus {
+.product-list .item:hover,
+.product-list .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -538,8 +538,8 @@ img {
   opacity: 0;
 }
 
-.product-list > .item:hover .description,
-.product-list > .item:focus .description {
+.product-list .item-link:hover .description,
+.product-list .item-link:focus .description {
   opacity: 1;
 }
 
@@ -561,6 +561,7 @@ img {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.875;
+  color: var(--primary-text-color);
 }
 
 .product {
